--- a/logfiletest/logfiletest.vcxproj
+++ b/logfiletest/logfiletest.vcxproj
@@ -139,14 +139,17 @@
     <ClInclude Include="experimental\WeaponSwitch.h" />
     <ClInclude Include="gui\ApFrame.h" />
     <ClInclude Include="gui\ExpFrame.h" />
+    <ClInclude Include="gui\GpFrame.h" />
     <ClInclude Include="gui\ItemAcquisitionFrame.h" />
     <ClInclude Include="gui\ItemBundleFrame.h" />
     <ClInclude Include="gui\ItemRollsFrame.h" />
+    <ClInclude Include="gui\KinahFrame.h" />
     <ClInclude Include="gui\ListCtrlFrame.h" />
     <ClInclude Include="gui\MainFrame.h" />
     <ClInclude Include="gui\MobKillsFrame.h" />
     <ClInclude Include="gui\ModulePanel.h" />
     <ClInclude Include="gui\ModuleWindowSelectionFrame.h" />
+    <ClInclude Include="gui\PlayerKillsFrame.h" />
     <ClInclude Include="gui\ProfessionFrame.h" />
     <ClInclude Include="gui\ProfessionLevelingFrame.h" />
     <ClInclude Include="language\EnglishNA.h" />
@@ -219,13 +222,16 @@
     <ClCompile Include="experimental\ProcDamageRegister.cpp" />
     <ClCompile Include="gui\ApFrame.cpp" />
     <ClCompile Include="gui\ExpFrame.cpp" />
+    <ClCompile Include="gui\GpFrame.cpp" />
     <ClCompile Include="gui\ItemAcquisitionFrame.cpp" />
     <ClCompile Include="gui\ItemBundleFrame.cpp" />
     <ClCompile Include="gui\ItemRollsFrame.cpp" />
+    <ClCompile Include="gui\KinahFrame.cpp" />
     <ClCompile Include="gui\ListCtrlFrame.cpp" />
     <ClCompile Include="gui\MainFrame.cpp" />
     <ClCompile Include="gui\MobKillsFrame.cpp" />
     <ClCompile Include="gui\ModuleWindowSelectionFrame.cpp" />
+    <ClCompile Include="gui\PlayerKillsFrame.cpp" />
     <ClCompile Include="gui\ProfessionFrame.cpp" />
     <ClCompile Include="gui\ProfessionLevelingFrame.cpp" />
     <ClCompile Include="language\LanguageManager.cpp" />
@@ -273,7 +279,7 @@
     <ClCompile Include="parser\SystemCFG.cpp" />
     <ClCompile Include="parser\UserCommandFactory.cpp" />
     <ClCompile Include="stringFunctions.cpp" />
-    <ClCompile Include="testModule\ExpTest.cpp" />
+    <ClCompile Include="testModule\HuntingModuleTest.cpp" />
     <ClCompile Include="testModule\testLog\TemporaryLogFile.cpp" />
   </ItemGroup>
   <ItemGroup>
