--- a/logfiletest/logfiletest.vcxproj.filters
+++ b/logfiletest/logfiletest.vcxproj.filters
@@ -228,6 +228,9 @@
     <ClInclude Include="lookups\RelicAp48.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="lookups\ExpChartKR51.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="gui\ApFrame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -271,6 +274,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="gui\ProfessionLevelingFrame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gui\TestFrame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -419,7 +425,10 @@
     <ClCompile Include="lookups\RelicAp48.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="testModule\HuntingModuleTest.cpp">
+    <ClCompile Include="lookups\ExpChartKR51.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tests\StringFunctionTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="gui\ApFrame.cpp">
@@ -462,6 +471,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="gui\ProfessionLevelingFrame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="gui\TestFrame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="mains\MyApp.cpp">
