soul healer handling update

--- a/logfiletest/logfiletest.vcxproj
+++ b/logfiletest/logfiletest.vcxproj
@@ -283,8 +283,8 @@
     <ClCompile Include="parser\SystemCFG.cpp" />
     <ClCompile Include="parser\UserCommandFactory.cpp" />
     <ClCompile Include="stringFunctions.cpp" />
+    <ClCompile Include="testModule\SoulHealerModuleTest.cpp" />
     <ClCompile Include="testModule\testLog\TemporaryLogFile.cpp" />
-    <ClCompile Include="tests\StringFunctionTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="classSkills.txt" />
