--- a/logfiletest/logfiletest.vcxproj.filters
+++ b/logfiletest/logfiletest.vcxproj.filters
@@ -231,6 +231,12 @@
     <ClInclude Include="lookups\ExpChartKR51.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="lookups\CommandStringsEUEnglish.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="lookups\SkillToClassHardCodedEUEnglish.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="gui\ApFrame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -277,6 +283,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="gui\TestFrame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="language\EnglishEU.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="lookups\ExpChartEU49.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -428,7 +440,13 @@
     <ClCompile Include="lookups\ExpChartKR51.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="testModule\SoulHealerModuleTest.cpp">
+    <ClCompile Include="lookups\CommandStringsEUEnglish.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="lookups\SkillToClassHardCodedEUEnglish.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="mains\MyApp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="gui\ApFrame.cpp">
@@ -476,7 +494,7 @@
     <ClCompile Include="gui\TestFrame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="mains\MyApp.cpp">
+    <ClCompile Include="lookups\ExpChartEU49.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
