--- a/logfiletest/logfiletest.vcxproj.filters
+++ b/logfiletest/logfiletest.vcxproj.filters
@@ -237,6 +237,12 @@
     <ClInclude Include="lookups\SkillToClassHardCodedEUEnglish.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="language\EnglishEU.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="lookups\ExpChartEU49.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="gui\ApFrame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -283,12 +289,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="gui\TestFrame.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="language\EnglishEU.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="lookups\ExpChartEU49.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -446,7 +446,10 @@
     <ClCompile Include="lookups\SkillToClassHardCodedEUEnglish.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="mains\MyApp.cpp">
+    <ClCompile Include="lookups\ExpChartEU49.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tests\ParserTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="gui\ApFrame.cpp">
@@ -494,7 +497,7 @@
     <ClCompile Include="gui\TestFrame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="lookups\ExpChartEU49.cpp">
+    <ClCompile Include="mains\MyApp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
