--- a/logfiletest/logfiletest.vcxproj.filters
+++ b/logfiletest/logfiletest.vcxproj.filters
@@ -452,7 +452,7 @@
     <ClCompile Include="lookups\ExpChartEU49.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="mains\MyApp.cpp">
+    <ClCompile Include="testModule\ExpTest50.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="gui\ApFrame.cpp">
@@ -501,6 +501,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="gui\TestFrame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="mains\MyApp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
