-Added 0.01% leeway for EXP update on death, to resolve user's updated EXP % ending up rejected if player character died in a zone that do not have EXP loss -Items crafted from aetherforging now show up in crafting window

--- a/logfiletest/logfiletest.vcxproj
+++ b/logfiletest/logfiletest.vcxproj
@@ -293,10 +293,11 @@
     <ClCompile Include="parser\SystemCFG.cpp" />
     <ClCompile Include="parser\UserCommandFactory.cpp" />
     <ClCompile Include="stringFunctions.cpp" />
-    <ClCompile Include="testModule\ExpTest50.cpp" />
+    <ClCompile Include="testModule\GatheringTest.cpp" />
     <ClCompile Include="testModule\testLog\TemporaryLogFile.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="changelog.txt" />
     <None Include="classSkills.txt" />
     <None Include="file.txt" />
     <None Include="output.txt" />
